# power-bi-python-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/skills/package-audit/: SKILL.md
.github/workflows/: ci.yml  python-package.yml  python-publish.yml
.scripts/: make_venv.py
config/: config.ini.example
docs/: index.md
docs/api/: auth.md  client.md  enums.md  exceptions.md  session.md  utils.md
docs/api/services/: admin.md  apps.md  available_features.md  capacities.md  dashboards.md  dataflow_storage_account.md  (+11 more)
docs/getting-started/: authentication.md  installation.md  quickstart.md
powerbi/: __init__.py  admin.py  apps.py  auth.py  available_features.py  capacities.py  client.py  dashboards.py  dataflow_storage_account.py  dataflows.py  datasets.py  embed_token.py  enums.py  exceptions.py  gateways.py  groups.py  import.py  imports.py  pipelines.py  push_datasets.py  reports.py  session.py  template_apps.py  users.py  utils.py
samples/: use_admin_service.py  use_available_features.py  use_capacities.py  use_client.py  use_client_with_access_token.py  use_dashboards_service.py  use_dataflow_storage.py  use_dataflows.py  use_datasets.py  use_gateways_service.py  use_groups_service.py  use_imports.py  use_pipelines.py  use_push_datasets.py  use_reports_service.py  use_template_apps_service.py  use_users_service.py  use_utils.py
tests/: conftest.py  test_auth.py  test_client.py  test_session.py  test_utils.py
video/: use_dashboard.py  use_push_data.py  use_reports.py
(+1 files in other folders)
